--- a/equipa.html
+++ b/equipa.html
@@ -99,11 +99,20 @@
       <p>Aqui vai ficar uma discrição sobre a equipa, o seu tamanho, o que diferencia esta equipa de outras, etc.</p>
       <p>	Somos uma equipa experiente, jovem e dinâmica, altamente especializada nas áreas da Gestão, Contabilidade, Fiscalidade e Recursos Humanos. Através de um posicionamento diferenciado, pretendemos ser líderes e especialistas no apoio efectivo à gestão do negócio das empresas, disponibilizando a nossa experiência acumulada a todos os sectores da Actividade económica.</p>
     </div>
-    <hr>
   </div>
   </div>
+  <hr>
 
   <div class="row row-equipa">
+
+    <div class="container-fluid padding">
+    <div class="row welcome text-center">
+      <div class="col-12">
+        <h1 class="display-4">Contabilistas Certificados</h1>
+      </div>
+      <hr>
+    </div>
+    </div>
 
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
       <img class="img-fluid person" src="img/paulo_rap.jpg" alt="">
@@ -158,12 +167,15 @@
       </div>
     <!-- End of Modal -->
   </div>
+</div>
 
   <br>
 
+<div class="row row-equipa">
+
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-    <img class="img-fluid person" src="img/bina.jpg" alt="">
-    <h3>Balbina</h3>
+    <img class="img-fluid person" src="img/maria.jpg" alt="">
+    <h3>Maria Gomes</h3>
     <hr class="hr_blue">
     <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn3">Ver Perfil</button>
     <!-- The Modal -->
@@ -173,11 +185,11 @@
           <span class="close3">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/bina.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
+              <img src="img/maria.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
             </div>
             <div class="col-9 perfil" style="padding-right:2rem;">
-              <h3>BALBINA ...</h3>
-              <h5>Recursos Humanos</h5>
+              <h3>MARIA GOMES</h3>
+              <h5>Contabilista Certificada</h5>
               <hr class="hr_blue">
               <p>lalalla</p>
             </div>
@@ -186,12 +198,11 @@
       </div>
     <!-- End of Modal -->
   </div>
-
 <br>
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-  <img class="img-fluid person" src="img/filomena.jpg" alt="">
-  <h3>Filomena</h3>
+  <img class="img-fluid person" src="img/sa.jpg" alt="">
+  <h3>Marta Sá</h3>
   <hr class="hr_blue">
   <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn4">Ver Perfil</button>
   <!-- The Modal -->
@@ -201,11 +212,11 @@
         <span class="close4">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/filomena.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
+            <img src="img/sa.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
           </div>
           <div class="col-9 perfil" style="padding-right:2rem;">
-            <h3>FILOMENA</h3>
-            <h5>Recursos Humanos</h5>
+            <h3>MARTA SÁ</h3>
+            <h5>Contabilista Certificada</h5>
             <hr class="hr_blue">
             <p>lalalla</p>
           </div>
@@ -214,14 +225,12 @@
     </div>
   <!-- End of Modal -->
 </div>
-</div>
 
   <br>
 
-  <div class="row row-equipa">
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-      <img class="img-fluid person" src="img/vera.jpg" alt="">
-      <h3>Vera</h3>
+      <img class="img-fluid person" src="img/paulo_card.jpg" alt="">
+      <h3>Paulo Cardoso</h3>
       <hr class="hr_blue">
       <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn5">Ver Perfil</button>
       <!-- The Modal -->
@@ -231,11 +240,11 @@
             <span class="close5">&times;</span>
             <div class="row">
               <div class="col-3">
-                <img src="img/vera.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
+                <img src="img/paulo_card.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
               </div>
               <div class="col-9 perfil" style="padding-right:2rem;">
-                <h3>VERA</h3>
-                <h5>Recursos Humanos</h5>
+                <h3>PAULO CARDOSO</h3>
+                <h5>Contabilista Certificado</h5>
                 <hr class="hr_blue">
                 <p>lalalla</p>
               </div>
@@ -244,8 +253,20 @@
         </div>
       <!-- End of Modal -->
     </div>
+</div>
 
-  <br>
+<br>
+<hr>
+<div class="row row-equipa">
+
+  <div class="container-fluid padding">
+  <div class="row welcome text-center">
+    <div class="col-12">
+      <h1 class="display-4">Contabilistas</h1>
+    </div>
+    <hr>
+  </div>
+  </div>
 
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
     <img class="img-fluid person" src="img/catarina.jpg" alt="">
@@ -277,7 +298,7 @@
 
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
     <img class="img-fluid person" src="img/david.jpg" alt="">
-    <h3>David</h3>
+    <h3>David Rosa</h3>
     <hr class="hr_blue">
     <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn7">Ver Perfil</button>
     <!-- The Modal -->
@@ -290,7 +311,7 @@
               <img src="img/david.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
             </div>
             <div class="col-9 perfil" style="padding-right:2rem;">
-              <h3>DAVID</h3>
+              <h3>DAVID ROSA</h3>
               <h5>Contabilista</h5>
               <hr class="hr_blue">
               <p>lalalla</p>
@@ -328,11 +349,9 @@
     </div>
   <!-- End of Modal -->
 </div>
-</div>
 
 <br>
 
-<div class="row-equipa row">
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
     <img class="img-fluid person" src="img/joao.jpg" alt="">
     <h3>João</h3>
@@ -358,8 +377,11 @@
       </div>
     <!-- End of Modal -->
   </div>
+</div>
 
 <br>
+
+<div class="row row-equipa">
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
   <img class="img-fluid person" src="img/kristina.jpg" alt="">
   <h3>Kristina</h3>
@@ -389,8 +411,8 @@
 <br>
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-<img class="img-fluid person" src="img/maria.jpg" alt="">
-<h3>Maria</h3>
+<img class="img-fluid person" src="img/camoes.jpg" alt="">
+<h3>Marta Camões</h3>
 <hr class="hr_blue">
 <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn11">Ver Perfil</button>
 <!-- The Modal -->
@@ -398,34 +420,6 @@
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close11">&times;</span>
-      <div class="row">
-        <div class="col-3">
-          <img src="img/maria.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
-        </div>
-        <div class="col-9 perfil" style="padding-right:2rem;">
-          <h3>MARIA</h3>
-          <h5>Contabilista</h5>
-          <hr class="hr_blue">
-          <p>lalalla</p>
-        </div>
-      </div>
-    </div>
-  </div>
-<!-- End of Modal -->
-</div>
-
-<br>
-
-<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-<img class="img-fluid person" src="img/camoes.jpg" alt="">
-<h3>Marta Camões</h3>
-<hr class="hr_blue">
-<button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn12">Ver Perfil</button>
-<!-- The Modal -->
-  <div id="myModal12" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <span class="close12">&times;</span>
       <div class="row">
         <div class="col-3">
           <img src="img/camoes.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
@@ -442,14 +436,39 @@
 <!-- End of Modal -->
 </div>
 
+<br>
+
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
+<img class="img-fluid person" src="img/vitorino.jpg" alt="">
+<h3>Marta Vitorino</h3>
+<hr class="hr_blue">
+<button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn12">Ver Perfil</button>
+<!-- The Modal -->
+  <div id="myModal12" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close12">&times;</span>
+      <div class="row">
+        <div class="col-3">
+          <img src="img/vitorino.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
+        </div>
+        <div class="col-9 perfil" style="padding-right:2rem;">
+          <h3>MARTA VITORINO</h3>
+          <h5>Contabilista</h5>
+          <hr class="hr_blue">
+          <p>lalalla</p>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- End of Modal -->
 </div>
 
 <br>
 
-<div class="row-equipa row">
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-    <img class="img-fluid person" src="img/sa.jpg" alt="">
-    <h3>Marta Sá</h3>
+    <img class="img-fluid person" src="img/sandra.jpg" alt="">
+    <h3>Sandra Morgado</h3>
     <hr class="hr_blue">
     <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn13">Ver Perfil</button>
     <!-- The Modal -->
@@ -459,10 +478,10 @@
           <span class="close13">&times;</span>
           <div class="row">
             <div class="col-3">
-              <img src="img/sa.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
+              <img src="img/sandra.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
             </div>
             <div class="col-9 perfil" style="padding-right:2rem;">
-              <h3>MARTA SÁ</h3>
+              <h3>SANDRA MORGADO</h3>
               <h5>Contabilista</h5>
               <hr class="hr_blue">
               <p>lalalla</p>
@@ -472,11 +491,14 @@
       </div>
     <!-- End of Modal -->
   </div>
+</div>
 
 <br>
+
+<div class="row row-equipa">
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-  <img class="img-fluid person" src="img/vitorino.jpg" alt="">
-  <h3>Marta Vitorino</h3>
+  <img class="img-fluid person" src="img/susana.jpg" alt="">
+  <h3>Susana Santos</h3>
   <hr class="hr_blue">
   <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn14">Ver Perfil</button>
   <!-- The Modal -->
@@ -486,10 +508,10 @@
         <span class="close14">&times;</span>
         <div class="row">
           <div class="col-3">
-            <img src="img/vitorino.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
+            <img src="img/susana.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
           </div>
           <div class="col-9 perfil" style="padding-right:2rem;">
-            <h3>MARTA VITORINO</h3>
+            <h3>SUSANA SANTOS</h3>
             <h5>Contabilista</h5>
             <hr class="hr_blue">
             <p>lalalla</p>
@@ -503,8 +525,8 @@
 <br>
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-<img class="img-fluid person" src="img/paulo_card.jpg" alt="">
-<h3>Paulo Cardoso</h3>
+<img class="img-fluid person" src="img/teresa_nasc.jpg" alt="">
+<h3>Teresa Nascimento</h3>
 <hr class="hr_blue">
 <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn15">Ver Perfil</button>
 <!-- The Modal -->
@@ -514,10 +536,10 @@
       <span class="close15">&times;</span>
       <div class="row">
         <div class="col-3">
-          <img src="img/paulo_card.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
+          <img src="img/teresa_nasc.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
         </div>
         <div class="col-9 perfil" style="padding-right:2rem;">
-          <h3>PAULO CARDOSO</h3>
+          <h3>TERESA NASCIMENTO</h3>
           <h5>Contabilista</h5>
           <hr class="hr_blue">
           <p>lalalla</p>
@@ -526,92 +548,6 @@
     </div>
   </div>
 <!-- End of Modal -->
-</div>
-
-<br>
-
-<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-<img class="img-fluid person" src="img/sandra.jpg" alt="">
-<h3>Sandra</h3>
-<hr class="hr_blue">
-<button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn16">Ver Perfil</button>
-<!-- The Modal -->
-  <div id="myModal16" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <span class="close16">&times;</span>
-      <div class="row">
-        <div class="col-3">
-          <img src="img/sandra.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
-        </div>
-        <div class="col-9 perfil" style="padding-right:2rem;">
-          <h3>SANDRA</h3>
-          <h5>Contabilista</h5>
-          <hr class="hr_blue">
-          <p>lalalla</p>
-        </div>
-      </div>
-    </div>
-  </div>
-<!-- End of Modal -->
-</div>
-
-</div>
-
-<br>
-
-<div class="row-equipa row">
-  <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-    <img class="img-fluid person" src="img/susana.jpg" alt="">
-    <h3>Susana</h3>
-    <hr class="hr_blue">
-    <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn17">Ver Perfil</button>
-    <!-- The Modal -->
-      <div id="myModal17" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
-          <span class="close17">&times;</span>
-          <div class="row">
-            <div class="col-3">
-              <img src="img/susana.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
-            </div>
-            <div class="col-9 perfil" style="padding-right:2rem;">
-              <h3>SUSANA</h3>
-              <h5>Contabilista</h5>
-              <hr class="hr_blue">
-              <p>lalalla</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    <!-- End of Modal -->
-  </div>
-
-<br>
-<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
-  <img class="img-fluid person" src="img/teresa_nasc.jpg" alt="">
-  <h3>Teresa Nascimento</h3>
-  <hr class="hr_blue">
-  <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn18">Ver Perfil</button>
-  <!-- The Modal -->
-    <div id="myModal18" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close18">&times;</span>
-        <div class="row">
-          <div class="col-3">
-            <img src="img/teresa_nasc.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
-          </div>
-          <div class="col-9 perfil" style="padding-right:2rem;">
-            <h3>TERESA NASCIMENTO</h3>
-            <h5>Contabilista</h5>
-            <hr class="hr_blue">
-            <p>lalalla</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  <!-- End of Modal -->
 </div>
 
 <br>
@@ -620,12 +556,12 @@
 <img class="img-fluid person" src="img/tomas.jpg" alt="">
 <h3>Tomás Sousa</h3>
 <hr class="hr_blue">
-<button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn19">Ver Perfil</button>
+<button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn16">Ver Perfil</button>
 <!-- The Modal -->
-  <div id="myModal19" class="modal">
+  <div id="myModal16" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
-      <span class="close19">&times;</span>
+      <span class="close16">&times;</span>
       <div class="row">
         <div class="col-3">
           <img src="img/tomas.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
@@ -648,9 +584,110 @@
 <!-- End of Modal -->
 </div>
 </div>
+<hr>
+<br>
+
+<div class="row row-equipa">
+
+  <div class="container-fluid padding">
+  <div class="row welcome text-center">
+    <div class="col-12">
+      <h1 class="display-4">Recursos Humanos</h1>
+    </div>
+    <hr>
+  </div>
+  </div>
+
+  <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
+    <img class="img-fluid person" src="img/filomena.jpg" alt="">
+    <h3>Filomena Matos</h3>
+    <hr class="hr_blue">
+    <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn17">Ver Perfil</button>
+    <!-- The Modal -->
+      <div id="myModal17" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close17">&times;</span>
+          <div class="row">
+            <div class="col-3">
+              <img src="img/filomena.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
+            </div>
+            <div class="col-9 perfil" style="padding-right:2rem;">
+              <h3>FILOMENA MATOS</h3>
+              <h5>Recursos Humanos</h5>
+              <hr class="hr_blue">
+              <p>lalalla</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- End of Modal -->
+  </div>
 
 <br>
 
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
+  <img class="img-fluid person" src="img/bina.jpg" alt="">
+  <h3>Balbina Maher</h3>
+  <hr class="hr_blue">
+  <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn18">Ver Perfil</button>
+  <!-- The Modal -->
+    <div id="myModal18" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close18">&times;</span>
+        <div class="row">
+          <div class="col-3">
+            <img src="img/bina.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
+          </div>
+          <div class="col-9 perfil" style="padding-right:2rem;">
+            <h3>BALBINA MAHER</h3>
+            <h5>Recursos Humanos</h5>
+            <hr class="hr_blue">
+            <p>lalalla</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- End of Modal -->
+</div>
+
+<br>
+
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
+<img class="img-fluid person" src="img/vera.jpg" alt="">
+<h3>Vera Lucas</h3>
+<hr class="hr_blue">
+<button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn19">Ver Perfil</button>
+<!-- The Modal -->
+  <div id="myModal19" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close19">&times;</span>
+      <div class="row">
+        <div class="col-3">
+          <img src="img/vera.jpg" style="width:100%;max-width:300px;padding-left:2rem;">
+        </div>
+        <div class="col-9 perfil" style="padding-right:2rem;">
+          <h3>VERA LUCAS</h3>
+          <h5>Recursos Humanos</h5>
+          <hr class="hr_blue">
+          <p>O Tomás tem 23 anos e licenciou-se em Economia na Nova School of Business and Economy em Fevereiro de 2018, estando neste momento a concluir o Mestrado em Gestão do Desporto na Faculdade de Motricidade Humana.</p>
+          <p>Com uma mãe Farmacêutica e proprietária de uma Farmácia, Tomás teve sempre curiosidade em ajudá-la com organização das faturas, recibos e pagamentos.</p>
+          <p>Tendo estagiado na Decisão Essencial durante o mês de Agosto de 2016, integrou-se perfeitamente na equipa, e desde logo manifestou agrado pelo trabalho, e pela forma como foi recebido.</p>
+          <p>Revela uma enorme capacidade de aprendizagem, bem como uma proactividade acima da média, solicitando sempre novas tarefas logo que conclui o que lhe é solicitado.</p>
+          <p>Após a conclusão da Licenciatura contactou a empresa, tendo sido admitido em Abril de 2018, primeiro no âmbito de um Estágio Profissional do IEFP, fazendo atualmente parte dos quadros da Decisão Essencial como trabalhador a tempo inteiro.</p>
+          <p>Nos tempos livres Tomás gosta de jogar e ver futebol e estar atento ao que se passa em Portugal e no Mundo, tanto a nível de economia como de notícias mais gerais.</p>
+          <p>Linha de contacto direto:<a href="tel:210348762"> 210348762</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- End of Modal -->
+</div>
+</div>
+
+<br>
 <!-- Footer -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 
