--- a/equipa.html
+++ b/equipa.html
@@ -50,7 +50,16 @@
           <a class="nav-link" href="sobre.html">Sobre Nós</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="equipa.html">Equipa</a>
+          <div class="dropdown">
+            <button class="dropbtn nav-link active">Equipa
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="cc.html">Contabilistas Certificados</a>
+              <a href="contabilistas.html">Contabilistas</a>
+              <a href="rh.html">Recursos Humanos</a>
+            </div>
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="servicos.html">Serviços</a>
@@ -114,9 +123,9 @@
     </div>
     </div>
 
-    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item" style="align:right">
       <img class="img-fluid person" src="img/paulo_rap.jpg" alt="">
-      <h3>Paulo Raposeiro</h3>
+      <h3 class="name">Paulo Raposeiro</h3>
       <hr class="hr_blue">
       <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn1">Ver Perfil</button>
       <!-- The Modal -->
@@ -140,11 +149,11 @@
       <!-- End of Modal -->
     </div>
 
-  <br>
+
 
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
     <img class="img-fluid person" src="img/teresa_rap.jpg" alt="">
-    <h3>Teresa Raposeiro</h3>
+    <h3 class="name">Teresa Raposeiro</h3>
     <hr class="hr_blue">
     <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn2">Ver Perfil</button>
     <!-- The Modal -->
@@ -169,13 +178,13 @@
   </div>
 </div>
 
-  <br>
+
 
 <div class="row row-equipa">
 
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
     <img class="img-fluid person" src="img/maria.jpg" alt="">
-    <h3>Maria Gomes</h3>
+    <h3 class="name">Maria Gomes</h3>
     <hr class="hr_blue">
     <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn3">Ver Perfil</button>
     <!-- The Modal -->
@@ -198,11 +207,11 @@
       </div>
     <!-- End of Modal -->
   </div>
-<br>
+
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
   <img class="img-fluid person" src="img/sa.jpg" alt="">
-  <h3>Marta Sá</h3>
+  <h3 class="name">Marta Sá</h3>
   <hr class="hr_blue">
   <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn4">Ver Perfil</button>
   <!-- The Modal -->
@@ -226,11 +235,11 @@
   <!-- End of Modal -->
 </div>
 
-  <br>
+
 
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
       <img class="img-fluid person" src="img/paulo_card.jpg" alt="">
-      <h3>Paulo Cardoso</h3>
+      <h3 class="name">Paulo Cardoso</h3>
       <hr class="hr_blue">
       <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn5">Ver Perfil</button>
       <!-- The Modal -->
@@ -255,7 +264,7 @@
     </div>
 </div>
 
-<br>
+
 <hr>
 <div class="row row-equipa">
 
@@ -270,7 +279,7 @@
 
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
     <img class="img-fluid person" src="img/catarina.jpg" alt="">
-    <h3>Catarina</h3>
+    <h3 class="name">Catarina</h3>
     <hr class="hr_blue">
     <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn6">Ver Perfil</button>
     <!-- The Modal -->
@@ -294,11 +303,11 @@
     <!-- End of Modal -->
   </div>
 
-  <br>
+
 
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
     <img class="img-fluid person" src="img/david.jpg" alt="">
-    <h3>David Rosa</h3>
+    <h3 class="name">David Rosa</h3>
     <hr class="hr_blue">
     <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn7">Ver Perfil</button>
     <!-- The Modal -->
@@ -322,11 +331,11 @@
     <!-- End of Modal -->
   </div>
 
-<br>
+
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
   <img class="img-fluid person" src="img/helder.jpg" alt="">
-  <h3>Helder</h3>
+  <h3 class="name">Helder</h3>
   <hr class="hr_blue">
   <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn8">Ver Perfil</button>
   <!-- The Modal -->
@@ -350,11 +359,11 @@
   <!-- End of Modal -->
 </div>
 
-<br>
+
 
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
     <img class="img-fluid person" src="img/joao.jpg" alt="">
-    <h3>João</h3>
+    <h3 class="name">João</h3>
     <hr class="hr_blue">
     <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn9">Ver Perfil</button>
     <!-- The Modal -->
@@ -379,12 +388,12 @@
   </div>
 </div>
 
-<br>
+
 
 <div class="row row-equipa">
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
   <img class="img-fluid person" src="img/kristina.jpg" alt="">
-  <h3>Kristina</h3>
+  <h3 class="name">Kristina</h3>
   <hr class="hr_blue">
   <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn10">Ver Perfil</button>
   <!-- The Modal -->
@@ -408,11 +417,11 @@
   <!-- End of Modal -->
 </div>
 
-<br>
+
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
 <img class="img-fluid person" src="img/camoes.jpg" alt="">
-<h3>Marta Camões</h3>
+<h3 class="name">Marta Camões</h3>
 <hr class="hr_blue">
 <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn11">Ver Perfil</button>
 <!-- The Modal -->
@@ -436,11 +445,11 @@
 <!-- End of Modal -->
 </div>
 
-<br>
+
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
 <img class="img-fluid person" src="img/vitorino.jpg" alt="">
-<h3>Marta Vitorino</h3>
+<h3 class="name">Marta Vitorino</h3>
 <hr class="hr_blue">
 <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn12">Ver Perfil</button>
 <!-- The Modal -->
@@ -464,11 +473,11 @@
 <!-- End of Modal -->
 </div>
 
-<br>
+
 
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
     <img class="img-fluid person" src="img/sandra.jpg" alt="">
-    <h3>Sandra Morgado</h3>
+    <h3 class="name">Sandra Morgado</h3>
     <hr class="hr_blue">
     <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn13">Ver Perfil</button>
     <!-- The Modal -->
@@ -493,12 +502,12 @@
   </div>
 </div>
 
-<br>
+
 
 <div class="row row-equipa">
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
   <img class="img-fluid person" src="img/susana.jpg" alt="">
-  <h3>Susana Santos</h3>
+  <h3 class="name">Susana Santos</h3>
   <hr class="hr_blue">
   <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn14">Ver Perfil</button>
   <!-- The Modal -->
@@ -522,11 +531,11 @@
   <!-- End of Modal -->
 </div>
 
-<br>
+
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
 <img class="img-fluid person" src="img/teresa_nasc.jpg" alt="">
-<h3>Teresa Nascimento</h3>
+<h3 class="name">Teresa Nascimento</h3>
 <hr class="hr_blue">
 <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn15">Ver Perfil</button>
 <!-- The Modal -->
@@ -550,11 +559,11 @@
 <!-- End of Modal -->
 </div>
 
-<br>
+
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
 <img class="img-fluid person" src="img/tomas.jpg" alt="">
-<h3>Tomás Sousa</h3>
+<h3 class="name">Tomás Sousa</h3>
 <hr class="hr_blue">
 <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn16">Ver Perfil</button>
 <!-- The Modal -->
@@ -585,7 +594,7 @@
 </div>
 </div>
 <hr>
-<br>
+
 
 <div class="row row-equipa">
 
@@ -600,7 +609,7 @@
 
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
     <img class="img-fluid person" src="img/filomena.jpg" alt="">
-    <h3>Filomena Matos</h3>
+    <h3 class="name">Filomena Matos</h3>
     <hr class="hr_blue">
     <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn17">Ver Perfil</button>
     <!-- The Modal -->
@@ -624,11 +633,10 @@
     <!-- End of Modal -->
   </div>
 
-<br>
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
   <img class="img-fluid person" src="img/bina.jpg" alt="">
-  <h3>Balbina Maher</h3>
+  <h3 class="name">Balbina Maher</h3>
   <hr class="hr_blue">
   <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn18">Ver Perfil</button>
   <!-- The Modal -->
@@ -652,11 +660,11 @@
   <!-- End of Modal -->
 </div>
 
-<br>
+
 
 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
 <img class="img-fluid person" src="img/vera.jpg" alt="">
-<h3>Vera Lucas</h3>
+<h3 class="name">Vera Lucas</h3>
 <hr class="hr_blue">
 <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn19">Ver Perfil</button>
 <!-- The Modal -->
