--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
             <a class="nav-link" href="sobre.html">Sobre Nós</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="equipa.html">Equipa</a>
+            <div class="dropdown">
+              <button class="dropbtn nav-link">Equipa
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="cc.html">Contabilistas Certificados</a>
+                <a href="contabilistas.html">Contabilistas</a>
+                <a href="rh.html">Recursos Humanos</a>
+              </div>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="servicos.html">Serviços</a>
