--- a/rh.html
+++ b/rh.html
@@ -51,13 +51,13 @@
         </li>
         <li class="nav-item">
           <div class="dropdown">
-            <button class="dropbtn nav-link active">Equipa
+            <button class="dropbtn nav-link active" style="color:#404040">Equipa
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
               <a href="cc.html">Contabilistas Certificados</a>
               <a href="contabilistas.html">Contabilistas</a>
-              <a href="rh.html">Recursos Humanos</a>
+              <a href="rh.html" style="color:#404040">Recursos Humanos</a>
             </div>
           </div>        </li>
         <li class="nav-item">
