--- a/contabilistas.html
+++ b/contabilistas.html
@@ -51,15 +51,16 @@
         </li>
         <li class="nav-item">
           <div class="dropdown">
-            <button class="dropbtn nav-link active">Equipa
+            <button class="dropbtn nav-link active" style="color:#404040">Equipa
               <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
               <a href="cc.html">Contabilistas Certificados</a>
-              <a href="contabilistas.html">Contabilistas</a>
+              <a href="contabilistas.html" style="color:#404040">Contabilistas</a>
               <a href="rh.html">Recursos Humanos</a>
             </div>
-          </div>        </li>
+          </div>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="servicos.html">Serviços</a>
         </li>
