--- a/sobre.html
+++ b/sobre.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="owl.carousel.min.css">
   <link rel="stylesheet" href="owl.theme.default.min.css">
   <style type="text/css">
-    .wrapper {width: 100%; overflow: hidden; padding-left: 3rem; padding-right: 3rem;}
+    .wrapper {width: 100%; overflow: hidden; padding-left: 5%; padding-right: 5%;}
   </style>
 
   </head>
@@ -89,7 +89,7 @@
 </nav>
 
 <!-- Opening Image -->
-<header class="masthead" style="background-image: url('img/equipa_PH.jpg')">
+<header class="masthead" style="background-image: url('img/equipa.JPG')">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
@@ -224,11 +224,15 @@
           </div>
         </div>
       </div>
-
     </div>
 
+      <div class="owl-controls">
+          <div class="custom-nav owl-nav"></div>
+      </div>
+
+    </div>
 </div>
-</div>
+
 </div>
 
 <!--footer-->
