--- a/carreiras.html
+++ b/carreiras.html
@@ -81,6 +81,147 @@
   </div>
   </nav>
 
+  <!-- Opening Image -->
+  <header class="masthead" style="background-image: url('img/working_PH.jpg')">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="site-heading">
+            <h1>Carreiras</h1>
+        <!--  <span class="subheading">A Saúde do Seu Negócio</span>   -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <!-- Candidatar -->
+  <div class="container-fluid padding">
+  <div class="row welcome text-center">
+    <div class="col-12">
+      <h1 class="display-4">Junte-se a nós!</h1>
+    </div>
+    <hr>
+    <div class="col-12">
+      <p> Somos uma equipa experiente, jovem e dinâmica, altamente especializada nas áreas da Gestão, Contabilidade, Fiscalidade e Recursos Humanos.</p>
+      <p style="padding-left:3%; padding-right:3%;"><u>O que oferecemos:</u> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+    </div>
+  </div>
+  </div>
+
+<hr>
+  <!-- Equipa -->
+
+  <!-- Indústrias "Portfolio" -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+  <div class="container-fluid padding">
+  <div class="row welcome text-center">
+    <div class="col-12 intro">
+      <h1 class="display-4">Opções de Carreira</h1>
+    </div>
+    <hr>
+  </div>
+  </div>
+
+<div class="row row-equipa">
+
+  <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
+    <img class="img-fluid person" src="img/cc_ph.jpg" alt="">
+    <h3 class="name">Contabilista Certificado</h3>
+    <hr class="hr_blue">
+    <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn17">Saber Mais</button>
+    <!-- The Modal -->
+      <div id="myModal17" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close17">&times;</span>
+          <div class="row">
+            <div  style="padding-right:2rem;padding-left:2rem;padding-bottom:2rem;">
+              <h3>Contabilista Certificado</h3>
+              <hr class="hr_blue">
+              <h5>Descrição:</h5>
+              <p>A Filomena tem 47 anos, é casada, tem uma filha de 4 anos e está na Decisão Essencial desde e Maio de 2019.</p>
+              <p>Anteriormente esteve 28 anos numa empresa de Contabilidade também a desempenhar funções na área de Recursos Humanos, e abraçou este novo projecto em busca de novos desafios. Apesar das funções serem basicamente as mesmas que desempenhava, sente que a empresa tem bastantes mais Clientes e que o volume de trabalho é bastante superior.</p>
+              <p>Apoia directamente um Cliente específico, que tem necessidades acrescidas ao nível de RH, nomeadamente na área da selecção e recrutamento e todo o apoio administrativo relacionado com os colaboradores.</p>
+              <h5>Requisitos:</h5>
+              <p>Gosta de construir a relações de longo prazo com os Clientes, na base da confiança e da sinceridade.</p>
+              <p>Nos tempos livres gosta de passear, conhecer locais novos, passar tempo de qualidade com a família, com a filha, ir ao cinema, e conviver com os amigos.</p>
+              <p>Linha de contacto direto:<a href="tel:210348762"> 210348762</a></p>
+              <button type="button" class="btn btn-outline-light btn-lg btn-primary"><a class=”link” href="mailto:sara.raposeiro@gmail.com?subject=Cadidatura para Contabilista Certificado">Candidate-se</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- End of Modal -->
+  </div>
+
+  <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
+    <img class="img-fluid person" src="img/c_ph.jpg" alt="">
+    <h3 class="name">Contabilidade</h3>
+    <hr class="hr_blue">
+    <button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn18">Saber Mais</button>
+    <!-- The Modal -->
+      <div id="myModal18" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close18">&times;</span>
+          <div class="row">
+            <div  style="padding-right:2rem;padding-left:2rem;padding-bottom:2rem;">
+              <h3>Contabilidade</h3>
+              <hr class="hr_blue">
+              <h5>Descrição:</h5>
+              <p>A Filomena tem 47 anos, é casada, tem uma filha de 4 anos e está na Decisão Essencial desde e Maio de 2019.</p>
+              <p>Anteriormente esteve 28 anos numa empresa de Contabilidade também a desempenhar funções na área de Recursos Humanos, e abraçou este novo projecto em busca de novos desafios. Apesar das funções serem basicamente as mesmas que desempenhava, sente que a empresa tem bastantes mais Clientes e que o volume de trabalho é bastante superior.</p>
+              <p>Apoia directamente um Cliente específico, que tem necessidades acrescidas ao nível de RH, nomeadamente na área da selecção e recrutamento e todo o apoio administrativo relacionado com os colaboradores.</p>
+              <h5>Requisitos:</h5>
+              <p>Gosta de construir a relações de longo prazo com os Clientes, na base da confiança e da sinceridade.</p>
+              <p>Nos tempos livres gosta de passear, conhecer locais novos, passar tempo de qualidade com a família, com a filha, ir ao cinema, e conviver com os amigos.</p>
+              <p>Linha de contacto direto:<a href="tel:210348762"> 210348762</a></p>
+              <button type="button" class="btn btn-outline-light btn-lg btn-primary"><a class=”link” href="mailto:sara.raposeiro@gmail.com?subject=Candidatura para Contabilista">Candidate-se</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- End of Modal -->
+  </div>
+
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 portfolio-item">
+<img class="img-fluid person" src="img/rh_ph.png" alt="">
+<h3 class="name">Recursos Humanos</h3>
+<hr class="hr_blue">
+<button type="button" class="btn btn-outline-light btn-lg btn-primary" id="myBtn19">Saber Mais</button>
+<!-- The Modal -->
+  <div id="myModal19" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close19">&times;</span>
+      <div class="row">
+        <div  style="padding-right:2rem;padding-left:2rem;padding-bottom:2rem;">
+          <h3>Recursos Humanos</h3>
+          <hr class="hr_blue">
+          <h5>Descrição:</h5>
+          <p>A Filomena tem 47 anos, é casada, tem uma filha de 4 anos e está na Decisão Essencial desde e Maio de 2019.</p>
+          <p>Anteriormente esteve 28 anos numa empresa de Contabilidade também a desempenhar funções na área de Recursos Humanos, e abraçou este novo projecto em busca de novos desafios. Apesar das funções serem basicamente as mesmas que desempenhava, sente que a empresa tem bastantes mais Clientes e que o volume de trabalho é bastante superior.</p>
+          <p>Apoia directamente um Cliente específico, que tem necessidades acrescidas ao nível de RH, nomeadamente na área da selecção e recrutamento e todo o apoio administrativo relacionado com os colaboradores.</p>
+          <h5>Requisitos:</h5>
+          <p>Gosta de construir a relações de longo prazo com os Clientes, na base da confiança e da sinceridade.</p>
+          <p>Nos tempos livres gosta de passear, conhecer locais novos, passar tempo de qualidade com a família, com a filha, ir ao cinema, e conviver com os amigos.</p>
+          <p>Linha de contacto direto:<a href="tel:210348762"> 210348762</a></p>
+          <button type="button" class="btn btn-outline-light btn-lg btn-primary"><a class=”link” href="mailto:sara.raposeiro@gmail.com?subject=Candidatura para Recursos Humanos">Candidate-se</a></button>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- End of Modal -->
+</div>
+</div>
+
+<br>
+<p style="padding-left:5%; padding-right:5%; text-align:center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu felis bibendum ut tristique et. In est ante in nibh mauris cursus mattis molestie. Nulla aliquet porttitor lacus luctus. Vulputate enim nulla aliquet porttitor.<p>
+<br>
+
   <!-- Footer -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
 
@@ -145,6 +286,9 @@
   <!-- Contact form JavaScript -->
   <script src="js/jqBootstrapValidation.js"></script>
   <script src="js/contact_me.js"></script>
+
+  <!-- Modal -->
+  <script src="carreiras.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
